# hoverfly

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  PERFORMANCE.md  README.md  README.npm.md  build.rs  install.sh  package.json  peers.seed.json  peers.ws.json
.cargo/: config.toml
.circleci/: config.yml
.github/workflows/: bench-direct.yml  bench.yml  ci.yml  refresh-peers.yml  release.yml
apps/gateway/: .gitignore  Caddyfile  README.md  build.js  package-lock.json  package.json  pnpm-lock.yaml  serve.js  tsconfig.json  tsconfig.worker.json
apps/gateway/deploy/: ask-tls.js  bzz-ask-tls.service
apps/gateway/public/: boot.html  index.html
apps/gateway/public/__gw__/: daemon-frame.html  peers.ws.json  styles.css  unregister.html
apps/gateway/scripts/: selftest.ts
apps/gateway/src/app/: landing.ts
apps/gateway/src/boot/: boot.ts
apps/gateway/src/daemon/: daemon.ts
apps/gateway/src/frame/: frame.ts
apps/gateway/src/shared/: bytes.ts  config.ts  ens.ts  parse-request.ts  protocol.ts  swarm-cid.ts  swarm-ref.ts
apps/gateway/src/sw/: sw.ts
apps/upload/: .gitignore  README.md  build-wasm.sh  build.js  package.json  pnpm-lock.yaml  tsconfig.json
apps/upload/public/: index.html
apps/upload/public/__up__/: styles.css
apps/upload/src/: app.ts  batches.ts  config.ts  hoverfly.ts  session-key.ts  swarmscan.ts  tar.ts  wallet.ts  worker-protocol.ts  worker.ts
docs/: pusher-design.md
examples/: regen-protos.rs  upload.yml
packaging/aur/hoverfly/: PKGBUILD
packaging/aur/hoverfly-bin/: PKGBUILD
proto/: handshake.proto  headers.proto  hive.proto  pricing.proto  pseudosettle.proto  pullsync.proto  pushsync.proto  retrieval.proto  status.proto  swap.proto
scripts/: regen-protos.sh
src/: batch.rs  bridge.rs  cache.rs  cheques.rs  cid.rs  client.rs  daemon.rs  dnsaddr.rs  doh.rs  feed.rs  idb_chunk_store.rs  inbound.rs  lib.rs  manifest.rs  mime.rs  peers.rs  pusher.rs  pushframe.rs  ratelimit.rs  signer.rs  stamp.rs  transport.rs  wasm.rs
src/erasure/: joiner.rs  mod.rs  reedsolomon.rs
src/multiwork/: coordinator.rs  mod.rs  protocol.rs  worker.rs
src/proto/: handshake.rs  headers.rs  hive.rs  mod.rs  pricing.rs  pseudosettle.rs  pushsync.rs  retrieval.rs  status.rs  swap.rs
src/protocols/: framing.rs  handshake.rs  hive.rs  mod.rs  pricing.rs  pseudosettle.rs  pullsync.rs  pushsync.rs  retrieval.rs  status.rs  swap.rs
src/protocols/stream_pool/: behaviour.rs  control.rs  handler.rs  mod.rs  shared.rs  upgrade.rs
src/wsws/: mod.rs
