[package]
name = "hoverfly"
version = "0.1.4"
edition = "2024"
description = "Minimal WASM-portable Swarm micro-client (native: TCP + WebSocket, WASM: WebSocket)"
license = "MIT"

[lib]
name = "hoverfly"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "hoverfly"
path = "src/bin/hoverfly.rs"
required-features = ["cli"]

[[bin]]
name = "sigcheck"
path = "src/bin/sigcheck.rs"
required-features = ["cli"]

[features]
default = ["cli", "bridge"]
cli = ["dep:clap", "dep:tracing-subscriber", "dep:tar", "dep:indicatif"]
# Optional cross-chain bridge command (`hoverfly bridge`): fund the
# signer's address with xDAI + BZZ on Gnosis from another chain via the
# Relay API (https://docs.relay.link). On by default; compile it out with
# `--no-default-features --features cli`. Native-only (reuses reqwest +
# the alloy signing stack already pulled in for `batch.rs`); adds no new
# dependencies.
bridge = []

# Redirect futures-bounded to a vendored copy whose `Delay::tokio` falls back to
# futures-timer on wasm32 (real tokio's timer panics in the browser). Fixes the
# libp2p-identify (and any other) `futures_bounded::Delay::tokio` usage on wasm.
[patch.crates-io]
futures-bounded = { path = "vendor/futures-bounded" }

[dependencies]
# Nectar primitives (BMT, chunks, file split/join, mantaray, postage)
nectar-primitives = { git = "https://github.com/nxm-rs/nectar", rev = "650e608636975c476361cc43f4b69d9eae52b386" }
nectar-mantaray   = { git = "https://github.com/nxm-rs/nectar", rev = "650e608636975c476361cc43f4b69d9eae52b386" }
nectar-postage    = { git = "https://github.com/nxm-rs/nectar", rev = "650e608636975c476361cc43f4b69d9eae52b386", features = ["std"] }
nectar-postage-issuer = { git = "https://github.com/nxm-rs/nectar", rev = "650e608636975c476361cc43f4b69d9eae52b386", features = ["std", "local-signer"] }

# alloy crypto (matches nectar's signer)
alloy-primitives = { version = "1.5.4", default-features = false, features = ["getrandom"] }
alloy-signer = { version = "1.5.2", default-features = false, features = ["eip712"] }
alloy-signer-local = { version = "1.5.2", default-features = false }
# alloy-sol-types is pulled transitively but we depend on its `sol!` macro
# and `Eip712Domain` / `SolStruct` directly for cheque signing. Keep it
# default-features-off for the same wasm-getrandom reasons as the rest of
# the alloy stack.
alloy-sol-types = { version = "1.5", default-features = false }
# JSON-encodes `[]byte` as base64-STANDARD; needed for cheque wire
# compatibility with bee (`SignedCheque.Signature` field).
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

# Wire protocols
prost = "0.13"
k256 = { version = "0.13", features = ["ecdsa"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto / encoding
sha3 = "0.10"
hex = "0.4"
bytes = "1"
mime_guess = { version = "2", default-features = false }

# Errors / logging
thiserror = "1"
tracing = "0.1"

# Async
futures = "0.3"

# Cross-platform Instant
web-time = "1"

# libp2p stream multiplexing is vendored + patched in
# `src/protocols/stream_pool/` to allow concurrent outbound substream
# upgrades per connection (upstream `libp2p_stream` serialises them
# behind a singular `pending_upgrade: Option`). No external dep needed.

# Native-only
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libp2p = { git = "https://github.com/libp2p/rust-libp2p", branch = "master", default-features = false, features = [
    "noise",
    "yamux",
    "tokio",
    "macros",
    "secp256k1",
    "ecdsa",
    "identify",
    "ping",
] }
libp2p-tcp = { git = "https://github.com/libp2p/rust-libp2p", branch = "master", features = ["tokio"] }
libp2p-websocket = { git = "https://github.com/libp2p/rust-libp2p", branch = "master" }
libp2p-core = { git = "https://github.com/libp2p/rust-libp2p", branch = "master" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "time", "sync", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tar = { version = "0.4", optional = true }
indicatif = { version = "0.17", optional = true }
getrandom = { version = "0.3", default-features = false }
# Parallel postage stamp signing on native targets. Wasm-single-thread
# doesn't benefit and rayon doesn't compile there anyway.
rayon = "1"
# RLP encoding for legacy EIP-155 transactions in `src/batch.rs`
# (postage-batch creation on Gnosis chain). No transitive ETH-stack
# deps — just `bytes` + a couple of small helpers.
alloy-rlp = "0.3"

# Wasm-only
[target.'cfg(target_arch = "wasm32")'.dependencies]
libp2p = { git = "https://github.com/libp2p/rust-libp2p", branch = "master", default-features = false, features = [
    "websocket-websys",
    "noise",
    "yamux",
    "macros",
    "secp256k1",
    "ecdsa",
    "identify",
    "ping",
] }
libp2p-core = { git = "https://github.com/libp2p/rust-libp2p", branch = "master" }
tokio = { package = "tokio_with_wasm", version = "0.8", features = ["sync", "macros", "time"] }
getrandom = { version = "0.3", default-features = false, features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2", default-features = false, features = ["js"] }
# alloy-primitives 1.5.x pulls in getrandom 0.4 transitively; enable wasm_js there too.
getrandom_04 = { package = "getrandom", version = "0.4", default-features = false, features = ["wasm_js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
# Used by the vendored websocket-websys module (src/wsws).
web-sys = { version = "0.3", features = ["BinaryType", "CloseEvent", "Event", "MessageEvent", "WebSocket", "Window", "WorkerGlobalScope"] }
# Persistent content-addressed chunk cache (src/idb_chunk_store). This crate is
# the only IndexedDB binding that works under wasm-bindgen's multi-threaded
# futures executor — which our `+atomics` / wasm-bindgen-rayon build uses — so
# `idb`/`rexie` (which break on transaction auto-commit there) aren't options.
indexed-db = "0.4"
# libp2p-swarm/ping pull `futures-timer` transitively; its default `Delay` on
# wasm uses a std::time::Instant-backed timer thread that panics ("time not
# implemented on this platform"). Enable the wasm-bindgen feature (gloo-timers)
# via feature-unification so the swarm's idle-connection timeout works in-browser.
futures-timer = { version = "3.0.3", features = ["wasm-bindgen"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
# Marker wrapper used to satisfy `+ Send` bounds on futures whose inner
# state (libp2p swarm + tokio_with_wasm timers) isn't `Send`. Safe on
# wasm32 because the platform is single-threaded; SendWrapper panics if
# accessed from a different thread, which can't happen in the browser.
send_wrapper = { version = "0.6", features = ["futures"] }

[dev-dependencies]
tokio-test = "0.4"
# Used by the `regen-protos` example to (re)generate `src/proto/*.rs`
# from `proto/*.proto`. Not pulled into normal `cargo build` — invoke
# explicitly via `scripts/regen-protos.sh`.
prost-build = "0.13"
